[gd_scene load_steps=9 format=3 uid="uid://dsn3ptx7pch02"]

[ext_resource type="Script" uid="uid://rcfu4m7xob6d" path="res://scripts/interface/loja.gd" id="1_15edx"]
[ext_resource type="Texture2D" uid="uid://dinvxcoayxabl" path="res://assets/interface/loja/loja.png" id="1_plj6y"]
[ext_resource type="Texture2D" uid="uid://ccwphrsmlk1ad" path="res://assets/powers/add_vida.png" id="3_oe5ki"]
[ext_resource type="Texture2D" uid="uid://bvqtjvksq0k2w" path="res://assets/powers/limpador_rapido.png" id="4_ohv1d"]
[ext_resource type="Texture2D" uid="uid://b8e01ygqr6wrj" path="res://assets/powers/dupla_pontuacao.png" id="5_ron3f"]
[ext_resource type="Texture2D" uid="uid://kfuckxslhklm" path="res://assets/powers/pausa_temporal.png" id="6_w6g7w"]
[ext_resource type="Texture2D" uid="uid://maf1jmguyndf" path="res://assets/powers/super_ima.png" id="7_ryocj"]
[ext_resource type="Texture2D" uid="uid://8ahkkdxnqy3b" path="res://assets/powers/pontuacao.png" id="8_ohv1d"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_15edx")

[node name="Background" type="TextureRect" parent="."]
offset_right = 972.0
offset_bottom = 2127.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_plj6y")

[node name="Item1" type="Button" parent="."]
offset_left = 13.0
offset_top = 58.0
offset_right = 521.0
offset_bottom = 566.0
scale = Vector2(0.333237, 0.260276)
icon = ExtResource("3_oe5ki")
flat = true

[node name="Item2" type="Button" parent="."]
offset_left = 216.0
offset_top = 52.0
offset_right = 1248.0
offset_bottom = 1596.0
scale = Vector2(0.144143, 0.0950225)
icon = ExtResource("4_ohv1d")
flat = true

[node name="Item3" type="Button" parent="."]
offset_left = 14.0
offset_top = 302.0
offset_right = 567.0
offset_bottom = 1005.0
scale = Vector2(0.309461, 0.211805)
icon = ExtResource("5_ron3f")
flat = true

[node name="Item4" type="Button" parent="."]
offset_left = 210.0
offset_top = 297.0
offset_right = 718.0
offset_bottom = 805.0
scale = Vector2(0.321784, 0.310445)
icon = ExtResource("6_w6g7w")
flat = true

[node name="Item5" type="Button" parent="."]
offset_left = 15.0
offset_top = 557.0
offset_right = 175.0
offset_bottom = 700.0
scale = Vector2(0.323621, 0.274144)
icon = ExtResource("7_ryocj")
flat = true

[node name="Item6" type="Button" parent="."]
offset_left = 208.0
offset_top = 558.0
offset_right = 368.0
offset_bottom = 701.0
flat = true

[node name="Voltar" type="Button" parent="."]
offset_left = 12.0
offset_top = 770.0
offset_right = 78.0
offset_bottom = 831.0
flat = true

[node name="Comprar1" type="Button" parent="."]
offset_left = 12.0
offset_top = 209.0
offset_right = 185.0
offset_bottom = 257.0
flat = true

[node name="Comprar2" type="Button" parent="."]
offset_left = 204.0
offset_top = 208.0
offset_right = 377.0
offset_bottom = 256.0
flat = true

[node name="Comprar3" type="Button" parent="."]
offset_left = 13.0
offset_top = 460.0
offset_right = 186.0
offset_bottom = 508.0
flat = true

[node name="Comprar4" type="Button" parent="."]
offset_left = 204.0
offset_top = 460.0
offset_right = 377.0
offset_bottom = 508.0
flat = true

[node name="Comprar5" type="Button" parent="."]
offset_left = 14.0
offset_top = 712.0
offset_right = 187.0
offset_bottom = 760.0
flat = true

[node name="Comprar6" type="Button" parent="."]
offset_left = 206.0
offset_top = 713.0
offset_right = 379.0
offset_bottom = 761.0
flat = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 328.0
offset_top = -7.0
offset_right = 1352.0
offset_bottom = 1017.0
scale = Vector2(0.0756241, 0.0605213)
texture = ExtResource("8_ohv1d")

[node name="estrelas" type="Label" parent="."]
offset_left = 272.0
offset_top = -8.0
offset_right = 316.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 41
text = "0"

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 282.0
offset_top = 203.0
offset_right = 1306.0
offset_bottom = 1227.0
scale = Vector2(0.0756241, 0.0605213)
texture = ExtResource("8_ohv1d")

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 328.0
offset_top = -7.0
offset_right = 1352.0
offset_bottom = 1017.0
scale = Vector2(0.0756241, 0.0605213)
texture = ExtResource("8_ohv1d")

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = 93.0
offset_top = 202.0
offset_right = 1117.0
offset_bottom = 1226.0
scale = Vector2(0.0756241, 0.0605213)
texture = ExtResource("8_ohv1d")

[node name="TextureRect5" type="TextureRect" parent="."]
offset_left = 292.0
offset_top = 454.0
offset_right = 1316.0
offset_bottom = 1478.0
scale = Vector2(0.0756241, 0.0605213)
texture = ExtResource("8_ohv1d")

[node name="TextureRect6" type="TextureRect" parent="."]
offset_left = 97.0
offset_top = 455.0
offset_right = 1121.0
offset_bottom = 1479.0
scale = Vector2(0.0756241, 0.0605213)
texture = ExtResource("8_ohv1d")

[node name="TextureRect7" type="TextureRect" parent="."]
offset_left = 101.0
offset_top = 708.0
offset_right = 1125.0
offset_bottom = 1732.0
scale = Vector2(0.0756241, 0.0605213)
texture = ExtResource("8_ohv1d")

[node name="Label2" type="Label" parent="."]
offset_left = 77.0
offset_top = 203.0
offset_right = 100.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 41
text = "2"

[node name="Label3" type="Label" parent="."]
offset_left = 268.0
offset_top = 202.0
offset_right = 291.0
offset_bottom = 259.0
theme_override_font_sizes/font_size = 41
text = "3"

[node name="Label4" type="Label" parent="."]
offset_left = 77.0
offset_top = 455.0
offset_right = 100.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 41
text = "4"

[node name="Label5" type="Label" parent="."]
offset_left = 273.0
offset_top = 454.0
offset_right = 296.0
offset_bottom = 511.0
theme_override_font_sizes/font_size = 41
text = "2"

[node name="Label6" type="Label" parent="."]
offset_left = 79.0
offset_top = 707.0
offset_right = 102.0
offset_bottom = 764.0
theme_override_font_sizes/font_size = 41
text = "6"

[connection signal="button_up" from="Item1" to="." method="_on_item_1_button_up"]
[connection signal="button_up" from="Item2" to="." method="_on_item_2_button_up"]
[connection signal="button_up" from="Item3" to="." method="_on_item_3_button_up"]
[connection signal="button_up" from="Item4" to="." method="_on_item_4_button_up"]
[connection signal="button_up" from="Item5" to="." method="_on_item_5_button_up"]
[connection signal="button_up" from="Item6" to="." method="_on_item_6_button_up"]
[connection signal="button_up" from="Voltar" to="." method="_on_voltar_button_up"]
[connection signal="button_up" from="Comprar1" to="." method="_on_comprar_1_button_up"]
[connection signal="button_up" from="Comprar2" to="." method="_on_comprar_2_button_up"]
[connection signal="button_up" from="Comprar3" to="." method="_on_comprar_3_button_up"]
[connection signal="button_up" from="Comprar4" to="." method="_on_comprar_4_button_up"]
[connection signal="button_up" from="Comprar5" to="." method="_on_comprar_5_button_up"]
[connection signal="button_up" from="Comprar6" to="." method="_on_comprar_6_button_up"]
